# lomiri-systems-settings

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  README.md  lomiri-system-settings.desktop.in.in
debian/: changelog  control  copyright  liblomirisystemsettings-dev.install  liblomirisystemsettingsprivate-dev.install  liblomirisystemsettingsprivate0.install  lomiri-system-settings.install  lomiri-system-settings.migrations  rules  ubuntu-system-settings-sound-gsettings-to-accountsservice.py
debian/session-migrations/: lomiri-system-settings-datahome-migration.sh  lomiri-system-settings-greeter-data-rename.sh  ubuntu-system-settings-keyboard-accountsservice-to-gsettings.py
lib/: CMakeLists.txt
lib/LomiriSystemSettings/: CMakeLists.txt
lib/LomiriSystemSettingsPrivate/: CMakeLists.txt  accountsservice.cpp  accountsservice.h  systemimage.cpp  systemimage.h
plugins/: CMakeLists.txt
plugins/about/: CMakeLists.txt  DevMode.qml  EntryComponent.qml  License.qml  PageComponent.qml  SingleValueStacked.qml  Software.qml  Storage.qml  StorageBar.qml  StorageItem.qml  Version.qml  click.cpp  click.h  plugin.cpp  storageabout.cpp  storageabout.h  systeminfo.cpp  systeminfo.h
plugins/background/: CMakeLists.txt  MainPage.qml  Preview.qml  WallpaperGrid.qml  background.cpp  background.h  background.settings  plugin.cpp  utilities.js
plugins/battery/: PageComponent.qml  SleepValues.qml  battery.cpp  battery.h  battery.settings  plugin.cpp  plugin.h
plugins/bluetooth/: AuthorizationRequestDialog.qml  ConfirmPasskeyDialog.qml  DevicePage.qml  DisplayPasskeyDialog.qml  DisplayPinCodeDialog.qml  PageComponent.qml  ProvidePasskeyDialog.qml  ProvidePinCodeDialog.qml  agent.cpp  agent.h  bluetooth.cpp  bluetooth.h  bluez_helper.h  dbus-shared.h  device.cpp  device.h  devicemodel.cpp  devicemodel.h  plugin.cpp  plugin.h
plugins/brightness/: CMakeLists.txt  PageComponent.qml  WifiDisplays.qml  WifiDisplaysAlert.qml  brightness.cpp  brightness.h  plugin.cpp
plugins/cellular/: CMakeLists.txt  PageApnEditor.qml  PageCarrierAndApn.qml  PageCarriersAndApns.qml  PageChooseApn.qml  PageChooseCarrier.qml  PageComponent.qml  cellular.cpp  cellular.h  cellular.settings  connectivity.cpp
plugins/example/: PageComponent.qml
plugins/flight-mode/: EntryComponent.qml  flight-mode-helper.cpp  flight-mode-helper.h  plugin.cpp  plugin.h
plugins/gestures/: CMakeLists.txt  PageComponent.qml  gestures.settings  gestures_dbushelper.cpp  gestures_dbushelper.h  plugin.cpp  plugin.h  qmldir.in
plugins/gestures/plugin/: CMakeLists.txt  gestures-plugin.cpp  gestures-plugin.h
plugins/hotspot/: CMakeLists.txt  Common.qml  HotspotSetup.qml  PageComponent.qml
plugins/language/: CMakeLists.txt  DisplayLanguage.qml  KeyboardLayoutItem.qml  KeyboardLayouts.qml  PageComponent.qml  PageHardwareKeyboard.qml  RebootNecessary.qml  SpellChecking.qml  SubsetView.qml  ThemeValues.qml  hardwarekeyboard-plugin.cpp  hardwarekeyboard-plugin.h  language-plugin.cpp  onscreenkeyboard-plugin.cpp  subset-model.cpp
plugins/launcher/: PageComponent.qml  launcher.h  launcher_impl.cpp  launcher_impl.h
plugins/launcher/plugin/: CMakeLists.txt  launcher-plugin.cpp
plugins/mouse/: CMakeLists.txt  Connected.qml  ItemTitle.qml  None.qml  PageComponent.qml  PrimaryButtonSelector.qml  SectionHeader.qml  TapArea.qml  mouse.cpp  mouse.h  plugin.cpp  plugin.h
plugins/nfc/: PageComponent.qml  plugin.cpp
plugins/notifications/: CMakeLists.txt  (+12 more)
po/: CMakeLists.txt  LINGUAS  POTFILES.in  aa.po  af.po  am.po  ar.po  ast.po  az.po  be.po  bem.po  bg.po  bn.po  bn_BD.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ckb.po  co.po  cs.po  cy.po  da.po  de.po  dv.po  el.po  en_AU.po  en_CA.po  en_GB.po  en_US.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fo.po  fr.po  fr_CA.po  (+92 more)
push-helper/: software_updates_helper.py
src/: CMakeLists.txt  item-model.cpp  main.cpp  plugin-manager.cpp  plugin.cpp  systemimage.cpp  ui.qrc  utils.cpp
src/SystemSettings/: IconWithFallback.qml  ItemPage.qml  SettingsItemTitle.qml  USSAdaptivePageLayout.qml
src/SystemSettings/ListItems/: Divider.qml  Icon.qml  IconProgression.qml  ProportionalShape.qml  SingleControl.qml  SingleValue.qml  SingleValueProgression.qml  StandardProgression.qml  ThinDivider.qml
src/qml/: AdaptiveContainer.qml  CategorySection.qml  CustomSwitchStyle.qml  EntryComponent.qml  EntryComponentGrid.qml  EntryComponentList.qml  MainWindow.qml  UncategorizedItemsView.qml
tests/: CMakeLists.txt  test-plugin.cpp  test-plugin2.cpp  tst_systemimage.cpp
(+208 files in other folders)
